fixed footer not stretching across page

--- a/structure.css
+++ b/structure.css
@@ -16,6 +16,10 @@ header {
 }
 
 .content {
+    min-height: 100%;
+}
+
+.content-inside {
     padding: 20px;
     padding-bottom: 50px;
 }
